d_visualize like default theme

--- a/catalog/view/theme/d_visualize/stylesheet/stylesheet.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/stylesheet.scss
@@ -5,6 +5,7 @@
 
 @import "common/main";
 @import "common/header";
+@import "common/menu";
 @import "common/footer";
 @import "common/search";
 @import "common/cart";
