--- a/catalog/view/theme/d_visualize/template/common/footer.twig
+++ b/catalog/view/theme/d_visualize/template/common/footer.twig
@@ -1,10 +1,4 @@
-		<footer class="footer">
-			<div class="wrapper">
-				<div class="container">
-					{{d_mega_footer}}
-				</div>
-			</div>
-		</footer>
+			{{d_footer}}
 				{% for script in scripts %}
 				<script src="{{script}}"></script>
 				{% endfor %}
