--- a/catalog/view/theme/d_visualize/template/common/header.twig
+++ b/catalog/view/theme/d_visualize/template/common/header.twig
@@ -63,65 +63,4 @@
         {% endfor %}
     </head>
     <body class="{{class}}">
-        <header class="header">
-            <div id="header_top" class="header-row header-top">
-                <div class="wrapper">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-5">
-                                <div class="top-links">
-                                    <ul class="list-inline">
-                                        <li>{{language}}</li>
-                                        <li>{{d_information}}</li>
-                                        <li>{{currency}}</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-7 text-right">{{d_menu}}</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="header_center" class="header-row header-center">
-                <div class="wrapper">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-4">{{d_logo}}</div>
-                            <div class="col-md-5">{{search}}</div>
-                            <div class="col-md-3">{{cart}}</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="header_bottom" class="header-row header-bottom">
-                <div class="wrapper">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-12">
-                                {{d_mega_menu}}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <script type="text/javascript">
-        	/* Search */
-        $('#search input[name=\'search\']').parent().find('button').on('click', function() {
-        	url = $('base').attr('href') + 'index.php?route=product/search';
-
-        	var value = $('header input[name=\'search\']').val();
-
-        	if (value) {
-        		url += '&search=' + encodeURIComponent(value);
-        	}
-
-        	location = url;
-        });
-
-        $('#search input[name=\'search\']').on('keydown', function(e) {
-        	if (e.keyCode == 13) {
-        		$('header input[name=\'search\']').parent().find('button').trigger('click');
-        	}
-        });
-        </script>
+        {{d_header}}
