--- a/catalog/view/theme/d_visualize/template/partial/d_product_thumb.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_product_thumb.twig
@@ -1,5 +1,5 @@
 <!-- > d_product_thumb -->
-<div class="product-layout product-list col-lg-3 col-md-3 col-sm-6 col-xs-12">
+<div class="product-layout col-lg-3 col-md-3 col-sm-6 col-xs-12">
     <div class="product-thumb transition">
       <div class="image"><a href="{{href}}"><img src="{{thumb}}" alt="{{name}}" title="{{name}}" class="img-responsive" /></a></div>
       <div class="caption">
