--- a/catalog/view/theme/d_visualize/template/common/currency.twig
+++ b/catalog/view/theme/d_visualize/template/common/currency.twig
@@ -1,4 +1,4 @@
-{% if display_currencies %}
+{% if currencies|length > 1 %}
 <form action="{{action}}" method="post" enctype="multipart/form-data" id="currency" class="dropdown currency">
     <a class="dropdown-toggle title" data-toggle="dropdown">
       {% for currency in currencies %}
