--- a/catalog/view/theme/d_visualize/template/common/language.twig
+++ b/catalog/view/theme/d_visualize/template/common/language.twig
@@ -1,4 +1,4 @@
-{% if display_languages %}
+{% if languages|length > 1 %}
 <form action="{{action}}" method="post" enctype="multipart/form-data" id="language" class="dropdown language">
     <a class="dropdown-toggle title" data-toggle="dropdown">
       {% for language in languages %}
