--- a/catalog/view/theme/d_visualize/stylesheet/common/_main.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/common/_main.scss
@@ -1,7 +1,7 @@
 body{
-	font-family: 'Open Sans', sans-serif;
-	font-size: 12px;
-	line-height: 20px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 12px;
+    line-height: 20px;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
@@ -18,6 +18,12 @@ body{
 .btn-lg {
     padding: 10px 16px;
     font-size: 15px;
+}
+.btn-xs {
+    padding: 1px 5px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
 }
 .btn-default {
     color: #777;
@@ -38,7 +44,7 @@ body{
 }
 
 legend{
-	padding-bottom: 15px;
+    padding-bottom: 15px;
 }
 
 label {
@@ -52,6 +58,23 @@ label {
 .fa {
     font-size: 14px;
 }
+.fa-stack{
+    width: 1em;
+    height: 1em;
+    line-height: 1em;
+}
 a:hover{
     text-decoration: none;
+}
+.required{
+    .control-label{
+        &:before{
+            content: '* ';
+            color: #F00;
+            font-weight: bold;
+        }
+    }
+}
+.form-control{
+    font-size: 12px;
 }
