--- a/catalog/view/theme/d_visualize/stylesheet/product/_category.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/product/_category.scss
@@ -1,3 +1,16 @@
 .refine-search{
-	margin-bottom: 10px;
+    margin-bottom: 10px;
+}
+.d_product_sort{
+    .col-md-3{
+        padding: 7.5px 12px;
+    }
+    .col-md-2{
+        label{
+            padding: 7.5px 12px;
+        }
+    }
+    .col-md-1{
+        padding: 7.5px 12px;
+    }
 }
