--- a/catalog/view/theme/d_visualize/template/account/voucher.twig
+++ b/catalog/view/theme/d_visualize/template/account/voucher.twig
@@ -7,7 +7,7 @@
         <div class="form-group required">
           <label class="col-sm-2 control-label" for="input-to-name">{{entry_to_name}}</label>
           <div class="col-sm-10">
-            <input type="text" name="to_name" value="{{to_name}}" id="input-to-name" class="form-control" />
+            <input type="text" name="to_name" placeholder="{{entry_to_name}}" value="{{to_name}}" id="input-to-name" class="form-control" />
             {% if error_to_name %}
             <div class="text-danger">{{error_to_name}}</div>
             {% endif %}
@@ -16,7 +16,7 @@
         <div class="form-group required">
           <label class="col-sm-2 control-label" for="input-to-email">{{entry_to_email}}</label>
           <div class="col-sm-10">
-            <input type="text" name="to_email" value="{{to_email}}" id="input-to-email" class="form-control" />
+            <input type="text" name="to_email" placeholder="{{entry_to_email}}" value="{{to_email}}" id="input-to-email" class="form-control" />
             {% if error_to_email %}
             <div class="text-danger">{{error_to_email}}</div>
             {% endif %}
@@ -25,7 +25,7 @@
         <div class="form-group required">
           <label class="col-sm-2 control-label" for="input-from-name">{{entry_from_name}}</label>
           <div class="col-sm-10">
-            <input type="text" name="from_name" value="{{from_name}}" id="input-from-name" class="form-control" />
+            <input type="text" name="from_name" placeholder="{{entry_from_name}}" value="{{from_name}}" id="input-from-name" class="form-control" />
             {% if error_from_name %}
             <div class="text-danger">{{error_from_name}}</div>
             {% endif %}
@@ -34,7 +34,7 @@
         <div class="form-group required">
           <label class="col-sm-2 control-label" for="input-from-email">{{entry_from_email}}</label>
           <div class="col-sm-10">
-            <input type="text" name="from_email" value="{{from_email}}" id="input-from-email" class="form-control" />
+            <input type="text" name="from_email" placeholder="{{entry_from_email}}" value="{{from_email}}" id="input-from-email" class="form-control" />
             {% if error_from_email %}
             <div class="text-danger">{{error_from_email}}</div>
             {% endif %}
@@ -47,14 +47,14 @@
               {% if voucher_theme.voucher_theme_id == voucher_theme_id %}
                 <div class="radio">
                   <label>
-                    <input type="radio" name="voucher_theme_id" value="{{voucher_theme_id}}" checked="checked" />
-                    {{name}}</label>
+                    <input type="radio" name="voucher_theme_id" value="{{voucher_theme.voucher_theme_id}}" checked="checked" />
+                    {{voucher_theme.name}}</label>
                 </div>
               {% else %}
             <div class="radio">
               <label>
-                <input type="radio" name="voucher_theme_id" value="{{voucher_theme_id}}" />
-                {{name}}</label>
+                <input type="radio" name="voucher_theme_id" value="{{voucher_theme.voucher_theme_id}}" />
+                {{voucher_theme.name}}</label>
             </div>
               {% endif %}
             {% endfor %}
@@ -66,7 +66,7 @@
         <div class="form-group">
           <label class="col-sm-2 control-label" for="input-message"><span data-toggle="tooltip" title="{{help_message}}">{{entry_message}}</span></label>
           <div class="col-sm-10">
-            <textarea name="message" cols="40" rows="5" id="input-message" class="form-control">{{message}}</textarea>
+            <textarea name="message" cols="40" rows="5" placeholder="{{entry_message}}" id="input-message" class="form-control">{{message}}</textarea>
           </div>
         </div>
         <div class="form-group">
