--- a/catalog/view/theme/d_visualize/template/common/cart.twig
+++ b/catalog/view/theme/d_visualize/template/common/cart.twig
@@ -24,7 +24,7 @@
           </td>
           <td class="text-right">x {{product.quantity}}</td>
           <td class="text-right">{{product.total}}</td>
-          <td class="text-center"><button type="button" onclick="cart.remove('{{product.cart_id}}}');" title="{{product.button_remove}}}" class="btn btn-danger btn-xs"><i class="fa fa-times"></i></button></td>
+          <td class="text-center"><button type="button" onclick="cart.remove('{{product.cart_id}}');" title="{{product.button_remove}}" class="btn btn-danger btn-xs"><i class="fa fa-times"></i></button></td>
         </tr>
         {% endfor %}
         {% for vouch in vouchers %}
@@ -48,7 +48,7 @@
           </tr>
           {% endfor %}
         </table>
-        <p class="text-right"><a href="{{cart}}"><strong><i class="fa fa-shopping-cart"></i> {{text_cart}}</strong></a>&nbsp;&nbsp;&nbsp;<a href="{{checkout}}"><strong><i class="fa fa-share"></i> {{text_checkout}}</strong></a></p>
+        <p class="text-right"><a href="{{cart}}" class="btn btn-default"><strong><i class="fa fa-shopping-cart"></i> {{text_cart}}</strong></a>&nbsp;&nbsp;&nbsp;<a href="{{checkout}}" class="btn btn-primary"><strong><i class="fa fa-share"></i> {{text_checkout}}</strong></a></p>
       </div>
     </li>
     {% else %}
