--- a/catalog/view/theme/d_visualize/template/partial/d_product_sort.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_product_sort.twig
@@ -1,41 +1,43 @@
 <!-- > d_product_sort -->
-<div class="row">
-    <div class="col-md-2">
-      <div class="btn-group hidden-xs">
-        <button type="button" id="list-view" class="btn btn-default" data-toggle="tooltip" title="{{button_list}}"><i class="fa fa-th-list"></i></button>
-        <button type="button" id="grid-view" class="btn btn-default" data-toggle="tooltip" title="{{button_grid}}"><i class="fa fa-th"></i></button>
-      </div>
-    </div>
-    <div class="col-md-3"><a href="{{compare}}" id="compare-total">{{text_compare}}</a></div>
-    <div class="col-md-2 text-right">
-      <label class="control-label" for="input-sort">{{text_sort}}</label>
-    </div>
-    <div class="col-md-2 text-right">
+<div class="d_product_sort">
+    <div class="row">
+        <div class="col-md-2">
+          <div class="btn-group hidden-xs">
+            <button type="button" id="list-view" class="btn btn-default" data-toggle="tooltip" title="{{button_list}}"><i class="fa fa-th-list"></i></button>
+            <button type="button" id="grid-view" class="btn btn-default" data-toggle="tooltip" title="{{button_grid}}"><i class="fa fa-th"></i></button>
+          </div>
+        </div>
+        <div class="col-md-3"><a href="{{compare}}" id="compare-total">{{text_compare}}</a></div>
+        <div class="col-md-2 text-right">
+          <label class="control-label" for="input-sort">{{text_sort}}</label>
+        </div>
+        <div class="col-md-2 text-right">
 
-      <select id="input-sort" class="form-control" onchange="location = this.value;">
-        {% for sort in sorts %}
-          {% if sort.value == sort_order %}
-            <option value="{{sort.href}}" selected="selected">{{sort.text}}</option>
-          {% else %}
-            <option value="{{sort.href}}">{{sort.text}}</option>
-          {% endif %}
-        {% endfor %}
-      </select>
-    </div>
-    <div class="col-md-1 text-right">
-      <label class="control-label" for="input-limit">{{text_limit}}</label>
-    </div>
-    <div class="col-md-2 text-right">
-      <select id="input-limit" class="form-control" onchange="location = this.value;">
-        {% for limit in limits %}
-          {% if limit.value == limit %}
-            <option value="{{limit.href}}" selected="selected">{{limit.text}}</option>
-          {% else %}
-            <option value="{{limit.href}}">{{limit.text}}</option>
-          {% endif %}
-        {% endfor %}
-      </select>
-    </div>
-  </div>
-  <br />
+          <select id="input-sort" class="form-control" onchange="location = this.value;">
+            {% for sort in sorts %}
+              {% if sort.value == sort_order %}
+                <option value="{{sort.href}}" selected="selected">{{sort.text}}</option>
+              {% else %}
+                <option value="{{sort.href}}">{{sort.text}}</option>
+              {% endif %}
+            {% endfor %}
+          </select>
+        </div>
+        <div class="col-md-1 text-right">
+          <label class="control-label" for="input-limit">{{text_limit}}</label>
+        </div>
+        <div class="col-md-2 text-right">
+          <select id="input-limit" class="form-control" onchange="location = this.value;">
+            {% for limit in limits %}
+              {% if limit.value == limit %}
+                <option value="{{limit.href}}" selected="selected">{{limit.text}}</option>
+              {% else %}
+                <option value="{{limit.href}}">{{limit.text}}</option>
+              {% endif %}
+            {% endfor %}
+          </select>
+        </div>
+      </div>
+      <br />
+</div>
 <!-- /> d_product_sort -->
