--- a/catalog/view/theme/d_visualize/template/product/product.twig
+++ b/catalog/view/theme/d_visualize/template/product/product.twig
@@ -52,7 +52,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    {% for attribute in attibute_group.attribute %}
+                    {% for attribute in attribute_group.attribute %}
                     <tr>
                       <td>{{attribute.name}}</td>
                       <td>{{attribute.text}}</td>
