--- a/catalog/view/theme/d_visualize/template/partial/d_account_field.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_account_field.twig
@@ -1,1 +1,1 @@
-{% include 'd_visualize/template/component/d_account_field/' ~ component.d_account_field.template ~ '.twig' %}
+{% include components.d_account_field.template with components.d_account_field %}
