--- a/catalog/view/theme/d_visualize/template/partial/d_account_field_affiliate.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_account_field_affiliate.twig
@@ -1,2 +1,1 @@
-
-{% include 'd_visualize/template/component/d_account_field_affiliate/' ~ component.d_account_field_affiliate.template ~ '.twig' %}
+{% include components.d_account_field_affiliate.template with components.d_account_field_affiliate %}
