--- a/catalog/view/theme/d_visualize/template/partial/d_address_field_affiliate.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_address_field_affiliate.twig
@@ -1,1 +1,1 @@
-{% include 'd_visualize/template/component/d_address_field_affiliate/' ~ component.d_address_field_affiliate.template ~ '.twig' %}
+{% include components.d_address_field_affiliate.template with components.d_address_field_affiliate %}
