--- a/catalog/view/theme/d_visualize/template/partial/d_button.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_button.twig
@@ -1,1 +1,1 @@
-{% include 'd_visualize/template/component/d_button/' ~ component.d_button.template ~ '.twig' %}
+{% include components.d_button.template with components.d_button %}
