--- a/catalog/view/theme/d_visualize/template/partial/d_button_continue.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_button_continue.twig
@@ -1,1 +1,1 @@
-{% include 'd_visualize/template/component/d_button_continue/' ~ component.d_button_continue.template ~ '.twig' %}
+{% include components.d_button_continue.template with components.d_button_continue %}
