--- a/catalog/view/theme/d_visualize/template/partial/d_button_submit.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_button_submit.twig
@@ -1,1 +1,1 @@
-{% include 'd_visualize/template/component/d_button_submit/' ~ component.d_button_submit.template ~ '.twig' %}
+{% include components.d_button_submit.template with components.d_button_submit %}
