--- a/catalog/view/theme/d_visualize/template/partial/d_cart.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_cart.twig
@@ -1,1 +1,1 @@
-{% include 'd_visualize/template/component/d_cart/' ~ component.d_cart.template ~ '.twig' %}
+{% include components.d_cart.template with components.d_cart %}
