--- a/catalog/view/theme/d_visualize/template/partial/d_name_field.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_name_field.twig
@@ -1,1 +1,1 @@
-{% include 'd_visualize/template/component/d_name_field/' ~ component.d_name_field.template ~ '.twig' %}
+{% include components.d_name_field.template with components.d_name_field %}
