--- a/catalog/view/theme/d_visualize/template/partial/d_notification.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_notification.twig
@@ -1,1 +1,1 @@
-{% include 'd_visualize/template/component/d_notification/' ~ component.d_notification.template ~ '.twig' %}
+{% include components.d_notification.template with components.d_notification %}
