--- a/catalog/view/theme/d_visualize/template/partial/d_review.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_review.twig
@@ -1,1 +1,1 @@
-{% include 'd_visualize/template/component/d_review/' ~ component.d_review.template ~ '.twig' %}
+{% include components.d_review.template with components.d_review %}
