--- a/catalog/view/theme/d_visualize/template/partial/d_address_field.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_address_field.twig
@@ -1,1 +1,1 @@
-{% include 'd_visualize/template/component/d_address_field/' ~ component.d_address_field.template ~ '.twig' %}
+{% include components.d_address_field.template with components.d_address_field %}
