--- a/catalog/view/theme/d_visualize/template/partial/d_product_list.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_product_list.twig
@@ -1,1 +1,1 @@
-{% include 'd_visualize/template/component/d_product_list/' ~ component.d_product_list.template ~ '.twig' %}
+{% include components.d_product_list.template with components.d_product_list %}
