--- a/catalog/view/theme/d_visualize/template/partial/d_search.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_search.twig
@@ -1,1 +1,1 @@
-{% include 'd_visualize/template/component/d_search/' ~ component.d_search.template ~ '.twig' %}
+{% include components.d_search.template with components.d_search %}
