--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/base/_palette.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/base/_palette.sass
@@ -11,9 +11,14 @@
 $p_white: #fff
 $p_black: #000
 $p_shark: #191b1f
+
 $p_red: #dc4949
 $p_choral: #bd6356
+
 $p_blue_light: #cbcfd8
+$p_blue_dark: #324767
+
+$p_grey: #dadde4
 $p_athens-gray: #f6f7f9
 $p_waterloo: #7c8598
 $p_astral: #337ab7
