--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/_import.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/_import.sass
@@ -1,10 +1,9 @@
-@import "form/checkbox"
-@import "form/radio_button"
 @import "form/date_time_picker"
 @import "form/dropdown_list"
 @import "form/field"
 @import "form/list_box"
 @import "form/forms"
+@import "form/custom-forms"
 
 @import "modal_window/lightbox"
 @import "modal_window/modal"
